amrs registration: update message.properties and modified initialization of the command object

--- a/metadata/messages.properties
+++ b/metadata/messages.properties
@@ -2,6 +2,23 @@ amrsregistration.title=Registration Module
 amrsregistration.linkName=Find/Register Patients
 amrsregistration.options=Registration Module Options
 
+amrsregistration.start.title=Let's Register Patients
+amrsregistration.start.details=Start by scanning the barcode, typing the ID or simply click I don't have ID button
+amrsregistration.start.barcode=Scanned Barcode
+amrsregistration.start.go=Check Scanned Barcode Data
+amrsregistration.start.nocard=I don't have ID
+
+amrsregistration.edit.title=Enter some demographic information of the patient
+amrsregistration.edit.details=Details information
+amrsregistration.start.review=Review patient information
+
+amrsregistration.edit.identifier=Modify Patient Identifier
+amrsregistration.edit.name=Modify Patient Name
+amrsregistration.edit.address=Modify Patient Address
+amrsregistration.edit.information=Modify Patient Information
+
+amrsregistration.start.title=Let's Register Patients
+
 amrsregistration.msg.searchBoxTitle=Find Patient(s)
 amrsregistration.msg.resultsFor=Results for
 amrsregistration.msg.viewing=Viewing
