amrs registration: update button name and checkbox for "preferred" handling

--- a/metadata/messages.properties
+++ b/metadata/messages.properties
@@ -5,8 +5,14 @@ amrsregistration.options=Registration Module Options
 amrsregistration.start.title=Let's Register Patients
 amrsregistration.start.details=Start by scanning the barcode, typing the ID or simply click I don't have ID button
 amrsregistration.start.barcode=Scanned Barcode
-amrsregistration.start.go=Check Scanned Barcode Data
-amrsregistration.start.nocard=I don't have ID
+
+#button name
+amrsregistration.button.startover=Start Over
+amrsregistration.button.edit=Edit Patient
+amrsregistration.button.register=Register Patient
+amrsregistration.button.save=Save Patient
+amrsregistration.button.go=Go
+amrsregistration.button.nocard=I Don't Have My ID
 
 amrsregistration.edit.title=Enter some demographic information of the patient
 amrsregistration.edit.details=Details information
