amrsregistration: Added logout servlet.

--- a/metadata/messages.properties
+++ b/metadata/messages.properties
@@ -1,4 +1,4 @@
-amrsregistration.title=Registration Module
+amrsregistration.title=AMRS Registration Module
 amrsregistration.linkName=Find/Register Patients
 amrsregistration.options=Registration Module Options
 
@@ -22,8 +22,6 @@ amrsregistration.edit.identifier=Modify Patient Identifier
 amrsregistration.edit.name=Modify Patient Name
 amrsregistration.edit.address=Modify Patient Address
 amrsregistration.edit.information=Modify Patient Information
-
-amrsregistration.start.title=Let's Register Patients
 
 amrsregistration.msg.searchBoxTitle=Find Patient(s)
 amrsregistration.msg.resultsFor=Results for
