amrs registration: bulk commit of the ui modification. need to reformat the jsp files.

--- a/metadata/messages.properties
+++ b/metadata/messages.properties
@@ -1,20 +1,25 @@
+amrsregistration.start.title=AMRS Registration
+amrsregistration.start.details=Start by scanning the barcode, typing the ID or simply press "Does Not Have ID Card" button
+
+amrsregistration.edit.start=Patient Information
+
+#misc code
+amrsregistration.patient.attributes=Patient Attributes
 amrsregistration.title=AMRS Registration Module
 amrsregistration.linkName=Find/Register Patients
 amrsregistration.options=Registration Module Options
 
-amrsregistration.start.title=Let's Register Patients
-amrsregistration.start.details=Start by scanning the barcode, typing the ID or simply click I don't have ID button
-amrsregistration.start.barcode=Scanned Barcode
+amrsregistration.address.neighborhoodCell=Neighborhood Cell
 
 #button name
 amrsregistration.button.startover=Start Over
 amrsregistration.button.edit=Edit Patient
 amrsregistration.button.register=Register Patient
-amrsregistration.button.save=Save Patient
+amrsregistration.button.continue=Continue
 amrsregistration.button.go=Go
-amrsregistration.button.nocard=I Don't Have My ID
+amrsregistration.button.nocard=Does Not Have ID
 
-amrsregistration.edit.title=Enter some demographic information of the patient
+amrsregistration.edit.title=Enter demographic information of the patient
 amrsregistration.edit.details=Details information
 amrsregistration.start.review=Review patient information
 
@@ -54,6 +59,7 @@ amrsregistration.tableHeading.Gender=Gender
 amrsregistration.tableHeading.Tribe=Tribe
 amrsregistration.tableHeading.Birthdate=Birthdate
 
+
 ================================= Create New Patient =========================
 amrsregistration.msg.newPatientWelcome=Creating a New Patient
 
@@ -61,29 +67,26 @@ amrsregistration.labels.nameHeading=Name
 amrsregistration.labels.givenNameLabel=Given
 amrsregistration.labels.middleNameLabel=Middle
 amrsregistration.labels.familyNameLabel=Family Name
+amrsregistration.labels.prefix=Given
+amrsregistration.labels.familyprefix=Family Prefix
+amrsregistration.labels.familysufix=Family Sufix
+
 amrsregistration.labels.IDTitle=ID Number(s)
 amrsregistration.labels.ID=Identifier
 amrsregistration.labels.IDType=Identifier Type
 amrsregistration.labels.IDLocation=Identifer Location
-amrsregistration.labels.IDPreferred=Preferred
+
 amrsregistration.labels.demographics=Demographics
+
 amrsregistration.labels.gender=Gender
 amrsregistration.labels.age=Age
 amrsregistration.labels.birthdate=Birthdate
-amrsregistration.labels.tribe=Tribe
+amrsregistration.labels.estimated=Estimated
+
 amrsregistration.labels.addressHeading=Address
 amrsregistration.labels.address=Address
 amrsregistration.labels.address2=Address2
-amrsregistration.labels.estimated=Estimated
 amrsregistration.labels.cityVillage=City/Village
 amrsregistration.labels.stateProvince=State/Province
 amrsregistration.labels.country=Country
 amrsregistration.labels.postalCode=Postal Code
-amrsregistration.labels.latitude=Latitude
-amrsregistration.labels.longitude=Longitude
-amrsregistration.labels.deceasedHeading=Deceased
-amrsregistration.msg.deceasedMessage=Check if this person is deceased
-amrsregistration.labels.deathDate=Death Date:
-amrsregistration.msg.causeMessage=Cause of Deaths
-amrsregistration.labels.saveButton=Save
-amrsregistration.labels.resetButton=Reset
