amrs registration: ui tweak again (unfinished). visit lab 8 for demo :)

--- a/metadata/messages.properties
+++ b/metadata/messages.properties
@@ -9,6 +9,8 @@ amrsregistration.title=AMRS Registration Module
 amrsregistration.linkName=Find/Register Patients
 amrsregistration.options=Registration Module Options
 
+amrsregistration.label.address.subregion=Sub Region
+
 amrsregistration.address.neighborhoodCell=Neighborhood Cell
 
 #button name
