amrs registration: modified layer for the search result on the edit page, madified the mask color

--- a/metadata/messages.properties
+++ b/metadata/messages.properties
@@ -92,3 +92,8 @@ amrsregistration.labels.cityVillage=City/Village
 amrsregistration.labels.stateProvince=State/Province
 amrsregistration.labels.country=Country
 amrsregistration.labels.postalCode=Postal Code
+
+#page specific messages
+amrsregistration.page.assign.description=The system has determined that the following patient(s) look similar to the one you have entered
+amrsregistration.page.assign.certify=I certify that the patient is not in the above list
+amrsregistration.page.assign.use=Use this patient?
