amrsregistration: ui tweak

--- a/metadata/messages.properties
+++ b/metadata/messages.properties
@@ -94,6 +94,8 @@ amrsregistration.labels.country=Country
 amrsregistration.labels.postalCode=Postal Code
 
 #page specific messages
-amrsregistration.page.assign.description=The system has determined that the following patient(s) look similar to the one you have entered
+amrsregistration.page.start.error=No patient with an identifier \"{0}\" found in the system
+amrsregistration.page.start.button.id=Do Not Have ID Card
+amrsregistration.page.assign.description=Select the patient from the list below by clicking on the entry or certify that the patient is not in the list
 amrsregistration.page.assign.certify=I certify that the patient is not in the above list
 amrsregistration.page.assign.use=Use this patient?
