--- a/metadata/messages.properties
+++ b/metadata/messages.properties
@@ -94,8 +94,17 @@ amrsregistration.labels.country=Country
 amrsregistration.labels.postalCode=Postal Code
 
 #page specific messages
-amrsregistration.page.start.error=No patient with an identifier \"{0}\" found in the system
+amrsregistration.page.start.error=No patient with an identifier \"{0}\" found in the system.
 amrsregistration.page.start.button.id=Do Not Have ID Card
-amrsregistration.page.assign.description=Select the patient from the list below by clicking on the entry or certify that the patient is not in the list
-amrsregistration.page.assign.certify=I certify that the patient is not in the above list
-amrsregistration.page.assign.use=Use this patient?
+amrsregistration.page.assign.description=Select the patient from the list below by clicking on the entry or certify that the patient is not in the list.
+amrsregistration.page.assign.certify=I certify that the patient is not in the above list.
+amrsregistration.page.assign.invalidId=Assigned identifier (\"{1}\", {0}) is invalid based on the check digit algorithm.
+amrsregistration.page.edit.namesWithId=Deleting name is not permitted when the name.
+amrsregistration.page.edit.addressWithId=Deleting address is not permitted when the address.
+amrsregistration.page.edit.invalidName=At least one of the given, middle or family name must be filled.
+amrsregistration.page.edit.invalidDate=Please enter either the patient\'s birth date or age.
+amrsregistration.page.edit.invalidGender=Please enter the patient\'s gender.
+amrsregistration.page.edit.futureDate=Patient's birth date can't have a date in the future as the value.
+amrsregistration.page.edit.invalidAddress=Please enter the patient's location and sub location data.
+amrsregistration.page.start.undefinedTarget=Target identifier \"{0}\" is not found in the system.
+amrsregistration.page.start.targetSpecify=Please specify the target in the global property (key: \"{0}").
