amrsregistration: Hack to override NameLayout.token.displayText to display "First Name" instead of "Given Name"

--- a/metadata/messages.properties
+++ b/metadata/messages.properties
@@ -53,23 +53,22 @@ amrsregistration.labels.registerFemaleLabel=Female
 amrsregistration.labels.registerPatient=Continue to Register Patient
 
 amrsregistration.tableHeading.Identifier=Identifer
-amrsregistration.tableHeading.Given=Given
-amrsregistration.tableHeading.Middle=Middle
+amrsregistration.tableHeading.Given=First Name
+amrsregistration.tableHeading.Middle=Middle Name
 amrsregistration.tableHeading.FamilyName=Family Name
 amrsregistration.tableHeading.Age=Age
 amrsregistration.tableHeading.Gender=Gender
 amrsregistration.tableHeading.Tribe=Tribe
 amrsregistration.tableHeading.Birthdate=Birthdate
 
-
-================================= Create New Patient =========================
+#================================= Create New Patient =========================
 amrsregistration.msg.newPatientWelcome=Creating a New Patient
 
 amrsregistration.labels.nameHeading=Name
-amrsregistration.labels.givenNameLabel=Given
-amrsregistration.labels.middleNameLabel=Middle
+amrsregistration.labels.givenNameLabel=First Name
+amrsregistration.labels.middleNameLabel=Middle Name
 amrsregistration.labels.familyNameLabel=Family Name
-amrsregistration.labels.prefix=Given
+amrsregistration.labels.prefix=Prefix
 amrsregistration.labels.familyprefix=Family Prefix
 amrsregistration.labels.familysufix=Family Sufix
 
