amrsregistration: Fixed validation on Patient Identifier fields and fixed Other Name(s) list in assignIdForm

--- a/metadata/messages.properties
+++ b/metadata/messages.properties
@@ -106,6 +106,8 @@ amrsregistration.page.edit.invalidDate=Please enter either the patient's birth d
 amrsregistration.page.edit.invalidGender=Please enter the patient's gender.
 amrsregistration.page.edit.futureDate=Patient's birth date can't have a date in the future as the value.
 amrsregistration.page.edit.invalidAddress=Please enter the patient's location and sub location data.
+amrsregistration.page.edit.invalidIdentifierType=Please enter a type and location for the patient identifier.
+amrsregistration.page.edit.invalidIdentifierLocation=Please enter a type and location for the patient identifier.
 amrsregistration.page.edit.moreMatches=Too many matches found. Returning first {0} matches.
 amrsregistration.page.start.undefinedTarget=Target identifier "{0}" is not found in the system.
 amrsregistration.page.start.targetSpecify=Please specify the target in the global property (key\: "{0}").
